# imageRetrieval

./: .gitignore  CMakeLists.txt  README.md  blg.md  bof_retrieval.cpp  dataimage_list.txt  dbow3_retrieval.cpp  imageRetrieval.cpp  imageTrainer.cpp  imageTrainer.h  kmeans.cpp  main.cpp  siftDetector.cpp  siftDetector.h  train.cpp  utils.h  vl_sift_detetor.h  vlad_retrieval.cpp
DBow3/src/: BowVector.cpp  BowVector.h  CMakeLists.txt  DBoW3.h  Database.cpp  Database.h  DescManip.h  FeatureVector.cpp  FeatureVector.h  QueryResults.cpp  QueryResults.h  ScoringObject.cpp  ScoringObject.h  Vocabulary.cpp  Vocabulary.h  exports.h  quicklz.c  quicklz.h  timers.h
DBow3/test/: CMakeLists.txt  dbow3_retrieval.cpp
src/: CMakeLists.txt  Database.cpp  Database.h  RootSiftDetector.cpp  RootSiftDetector.h  Searcher.cpp  Searcher.h  Trainer.cpp  Trainer.h  Utility.cpp  Utility.h  Vocabulary.cpp  Vocabulary.h
